# lian-li-wireless

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  NOTICE  README.md
crates/llw-cli/: Cargo.toml
crates/llw-cli/src/: main.rs
crates/llw-daemon/: Cargo.toml
crates/llw-daemon/src/: acquisition.rs  config.rs  curve.rs  effects_bridge.rs  fan.rs  ipc.rs  main.rs  migrate.rs  observation.rs  reliability.rs  rgb_assert.rs  sensors.rs  supervisor.rs
crates/llw-effects/: Cargo.toml
crates/llw-effects-wasm/: Cargo.toml
crates/llw-effects-wasm/src/: lib.rs
crates/llw-effects-wasm/tests/: goldens.rs
crates/llw-effects/src/: color.rs  geometry.rs  lib.rs
crates/llw-effects/src/effects/: breathing.rs  color_cycle.rs  meteor.rs  mod.rs  rainbow.rs  ripple.rs  runway.rs  stat.rs
crates/llw-protocol/: Cargo.toml  build.rs
crates/llw-protocol/examples/: burst-recovery.rs  mobo-watch.rs  rebind-channel.rs  save-default.rs  seq-watch.rs  steer-probe.rs
crates/llw-protocol/src/: consts.rs  device_kind.rs  dongle.rs  frames.rs  io.rs  lib.rs  record.rs  tinyuz.rs  transport.rs
crates/llw-ui/: Cargo.toml  tauri.conf.json
crates/llw-ui/icons/: icon.icns
crates/llw-ui/src/: commands.rs  ipc.rs  main.rs
crates/llw-ui/ui/: index.html  package-lock.json  package.json  tsconfig.json
crates/llw-ui/ui/src/: App.svelte  App.tsx  main.tsx
crates/llw-ui/ui/src/lib/: components.css  sections.test.ts  sections.ts  theme.css  wasm.test.ts
crates/llw-ui/ui/src/lib/components/: ConfirmDialog.tsx  CurveEditor.tsx  DaemonBanner.svelte  DaemonBanner.tsx  EffectRail.tsx  NamePromptDialog.tsx  Sidebar.svelte  Sidebar.tsx  StageCanvas.tsx  ToastArea.tsx
crates/llw-ui/ui/src/lib/sections/: Cooling.svelte  Cooling.tsx  Devices.svelte  Devices.tsx  Health.svelte  Health.tsx  Lighting.svelte  Lighting.tsx
crates/llw-ui/ui/src/lib/stores/: applyFlow.test.ts  applyFlow.ts  bindFlow.test.ts  bindFlow.ts  coolingModel.test.ts  coolingModel.ts  curveModel.test.ts  curveModel.ts  stage.test.ts  stage.ts  status.test.ts  status.ts  toasts.test.ts  toasts.ts  useApplyFlow.ts  useBindFlow.ts  useStage.ts  useStatus.ts  useToasts.ts
crates/llw-ui/ui/src/lib/wasm-goldens/: goldens.json
docs/superpowers/plans/: 2026-07-13-m1-protocol-port-cli.md  2026-07-13-m2a-daemon-foundations.md  2026-07-13-m2b-reliability-daemon.md  2026-07-14-m3-effect-engine.md  2026-07-14-m4a-bind-inventory.md  2026-07-14-m4b-tauri-shell.md  2026-07-15-m4cde-lighting-cooling-polish.md
docs/superpowers/specs/: 2026-07-13-lian-li-wireless-design.md  2026-07-14-m4-ui-design.md
packaging/systemd/: llw-daemon.service
packaging/udev/: 99-llw.rules
