[package]
name = "llw-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "llw"
path = "src/main.rs"

[dependencies]
llw-protocol = { path = "../llw-protocol" }
llw-effects = { path = "../llw-effects" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
