[package]
name = "llw-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Reliability daemon for Lian Li wireless devices (fans, RGB, link supervision)"

[dependencies]
llw-protocol = { path = "../llw-protocol" }
llw-effects = { path = "../llw-effects" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
signal-hook = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
