[package]
name = "llw-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
tauri = { version = "2", default-features = true }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
